Ajout de l'interface d'inscription